passed checks by adding missing dependencies in DESCRIPTION and correcting vignettes titles

--- a/vignettes/DIANE_Input_data.Rmd
+++ b/vignettes/DIANE_Input_data.Rmd
@@ -2,7 +2,7 @@
 title: "Data upload"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{DIANE}
+  %\VignetteIndexEntry{Data upload}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
