--- a/vignettes/DIANE_normalize.Rmd
+++ b/vignettes/DIANE_normalize.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Normalisation"
+title: "Normalization"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{DIANE}
+  %\VignetteIndexEntry{Normalization}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
